Keep TwoPhase as primary solver, remove fallbacks and extra drivers; stub SimpleIDA